tests/fixtures/invalid/anonymous_aggregate_distinct_type_pointer_assignment.c
int main(void) {
    struct { int value; } left = {1};
    struct { int value; } *right = &left;
    return right->value;
}
